--- a/src/components/Box/index.less
+++ b/src/components/Box/index.less
@@ -7,6 +7,9 @@
       font-size: 16px;
       color:#1A1D2C;
       padding: 0;
+      span{
+        color: #9899A0;
+      }
     }
     .ant-card-extra{
       font-size: 14px;
