--- a/src/views/Assets/index.less
+++ b/src/views/Assets/index.less
@@ -16,6 +16,10 @@
         color: #1A1D2C;
         font-size: 12px;
         padding: 5px 0 !important;
+        cursor: pointer;
+        .active{
+          color: #3562FF;
+        }
       }
     }
     .ant-table-small > .ant-table-content > .ant-table-scroll > .ant-table-header > table > .ant-table-thead > tr > th{
