--- a/src/views/Orderbook/index.less
+++ b/src/views/Orderbook/index.less
@@ -9,11 +9,14 @@
       padding: 5px 0;
     }
   }
-  .ant-card-body{
-    .conent{
-      height: 380px;
-      overflow-x: hidden;
-      overflow-y: auto;
+  #orders{
+    height: 380px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    .content{
+      height: auto;
+      float: left;
+      width: 100%;
     }
   }
   .new-price{
