--- a/src/components/Box/index.less
+++ b/src/components/Box/index.less
@@ -7,8 +7,16 @@
       font-size: 16px;
       color:#1A1D2C;
       padding: 0;
-      span{
+      span.key{
         color: #9899A0;
+      }
+      span{
+        &.green{
+          color: #07B256;
+        }
+        &.red{
+          color: #DD4546;
+        }
       }
     }
     .ant-card-extra{
