--- a/src/index.less
+++ b/src/index.less
@@ -4,9 +4,13 @@
   outline: 0;
   box-sizing: border-box;
 }
+
 *:focus, *:hover{
   outline: 0!important;
   box-shadow: none!important;
+}
+a, a:hover, a:active, a:focus{
+  text-decoration: none;
 }
 .ant-btn:after, .ant-select:after, .ant-select-selection:after {
   border: 0 none;
@@ -19,5 +23,5 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: Heiti SC,Open Sans,PingFang SC,Hiragino Sans GB,Microsoft YaHei,WenQuanYi Micro Hei,monospace,serif;
 }
