--- a/src/views/Trade/index.less
+++ b/src/views/Trade/index.less
@@ -4,10 +4,16 @@
   .ant-form-explain{
     text-align: left;
     display: none;
+    // height: 20px;
+    // font-size: 12px;
   }
   .ant-btn-default{
     background-color: #BEBEC1!important;
     color:#1A1D2C!important;
+    a{
+      line-height: 32px;
+      display: inline-block;
+    }
     &:hover,&:focus,&:active{
       background-color: #BEBEC1;
       color:#1A1D2C;
