--- a/src/views/LoginForm/index.less
+++ b/src/views/LoginForm/index.less
@@ -1,8 +1,16 @@
 .login-form {
   .login-form-forgot {
-    float: right;
+    line-height: 44px;
   }
   .login-form-button {
     width: 100%;
+  }
+  .ant-form-item{
+    margin-bottom: 16px;
+    padding-bottom: 0;
+    .ant-input, .ant-btn{
+      height: 44px;
+      line-height: 44px;
+    }
   }
 }
