--- a/src/views/Orderbook/index.less
+++ b/src/views/Orderbook/index.less
@@ -30,7 +30,6 @@
   .orderbook-table{
     margin: 0 24px;
     font-size: 12px;
-    overflow: scroll;
     &.ask{
       tr>td{
         &:first-of-type{
@@ -59,6 +58,7 @@
         color: #1A1D2C;
         font-size: 12px;
         padding: 5px 0 !important;
+        cursor: pointer;
       }
       & > .ant-table-content > .ant-table-body{
         margin: 0;
